# genetics-content

./: .gitignore  KNOWLEDGE_BASE_README.txt  README.md  pyproject.toml
extracted_text/: 01_02_dna_genetic_material.txt  01_03_structure_of_dna.txt  01_04_genes_basic_units.txt  01_05_function_of_genes.txt  01_06_nuclear_genome.txt  nigms_new_genetics.txt  open_genetics_libretexts.txt  openstax_genetics_unit.txt  schleif_genetics_molecular_biology.txt
rag_chatbot/: README.md  __init__.py  chat.py  ingest.py  start.sh.example  web.py
